pi-cluster/cluster/apps/monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
    - host: "grafana.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 80
  tls:
    - hosts:
        - grafana.${SECRET_DOMAIN}
      secretName: grafana-tls
